# elafry

./: .gitignore  Cargo.toml  README.md  build.rs  configuration_1.yaml  configuration_2.yaml  configuration_3.yaml  default.yaml  plant.csv  plot.py
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
apps/demo/: Cargo.toml
apps/demo/src/: main.rs
apps/demo_a/: Cargo.toml
apps/demo_a/src/: main.rs
apps/demo_b/: Cargo.toml
apps/demo_b/src/: main.rs
apps/fcs_a/: Cargo.toml
apps/fcs_a/src/: lib.rs  main.rs
apps/fcs_b/: Cargo.toml
apps/fcs_b/src/: lib.rs  main.rs
apps/plant/: Cargo.toml
apps/plant/src/: lib.rs  main.rs
configuration/: default.yaml  demo_1.yaml  demo_2.yaml  demo_3.yaml  plant_1.yaml  plant_2.yaml  plant_3.yaml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  main.rs
crates/agent/src/agent/: mod.rs  router.rs  runner.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/agent/: runner.rs
crates/elafry/: Cargo.toml
crates/elafry/src/: lib.rs
crates/elafry/src/communications/: mod.rs
crates/elafry/src/configuration/: mod.rs
crates/elafry/src/messages/: mod.rs
crates/elafry/src/services/: communication.rs  mod.rs  state.rs
crates/elafry/src/state/: mod.rs
crates/elafry/src/types/: communication.rs  configuration.rs  mod.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/runner/src/global_state/: mod.rs
crates/runner/src/services/: communication.rs  management.rs  mod.rs  scheduler.rs  state.rs
crates/runner/src/services/management/: background.rs  mod.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: communications.rs  lib.rs
schema/: message_schema.capnp
src/: lib.rs
src/agent/: mod.rs
src/agent/router/: mod.rs
src/schema/: mod.rs
