[workspace]
resolver = "2"
members = [
    "apps/fcs_a",
    "apps/fcs_b",
    "apps/plant",
    "crates/agent",
    "crates/elafry",
]

[workspace.dependencies]
elafry = { path = "crates/elafry" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
capnp = "0.14"
libloading = "0.8.1"

[workspace.dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
