[workspace]
resolver = "2"
members = [
    "apps/fcs_a", "apps/fcs_b", "apps/plant", "apps/agent", "apps/demo_a", "apps/demo_b",
    "crates/cli", "crates/elafry", "crates/runner",
]

[workspace.dependencies]
elafry = { path = "crates/elafry" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.32"
bincode = "1.3.3"
capnp = "0.14"
command-fds = "0.3.0"
libc = "0.2.153"
log = "0.4.21"
simple_logger = "4.3.3"
env_logger = "0.11.3"

[workspace.dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
