[package]
name = "demo_b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elafry = { workspace = true }

serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }

csv = "1.1"

[[bin]]
name = "demo_b"
test = false
bench = false