[package]
name = "fcs_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elafry = { workspace = true, features=["instrument"]}

serde = { workspace = true }
bincode = { workspace = true }
simple_logger = { workspace = true }