[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elafry = {workspace = true}

bincode = { workspace = true }
uuid = { workspace = true }

libloading = { workspace = true }
command-fds = { workspace = true }
libc = { workspace = true }

csv = "1.1"